--- a/Codes/Backtester Algorithm1.ipynb
+++ b/Codes/Backtester Algorithm1.ipynb
@@ -2,20 +2,250 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the working directory\n",
+    "os.chdir(r\"D:\\Benson\\aUpWork\\Douglas Backtester Algo\\Backtester Algorithm\\Data\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Vol.</th>\n",
+       "      <th>Change %</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01/28/2025</td>\n",
+       "      <td>16.72</td>\n",
+       "      <td>16.57</td>\n",
+       "      <td>16.73</td>\n",
+       "      <td>16.33</td>\n",
+       "      <td>950.74K</td>\n",
+       "      <td>1.95%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01/27/2025</td>\n",
+       "      <td>16.40</td>\n",
+       "      <td>16.44</td>\n",
+       "      <td>16.62</td>\n",
+       "      <td>16.23</td>\n",
+       "      <td>2.56M</td>\n",
+       "      <td>-2.90%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01/24/2025</td>\n",
+       "      <td>16.89</td>\n",
+       "      <td>17.00</td>\n",
+       "      <td>17.08</td>\n",
+       "      <td>16.86</td>\n",
+       "      <td>1.39M</td>\n",
+       "      <td>-0.41%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01/23/2025</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>16.80</td>\n",
+       "      <td>16.97</td>\n",
+       "      <td>16.77</td>\n",
+       "      <td>1.03M</td>\n",
+       "      <td>-0.41%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01/22/2025</td>\n",
+       "      <td>17.03</td>\n",
+       "      <td>17.04</td>\n",
+       "      <td>17.09</td>\n",
+       "      <td>16.97</td>\n",
+       "      <td>1.47M</td>\n",
+       "      <td>0.89%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  Price   Open   High    Low     Vol. Change %\n",
+       "0  01/28/2025  16.72  16.57  16.73  16.33  950.74K    1.95%\n",
+       "1  01/27/2025  16.40  16.44  16.62  16.23    2.56M   -2.90%\n",
+       "2  01/24/2025  16.89  17.00  17.08  16.86    1.39M   -0.41%\n",
+       "3  01/23/2025  16.96  16.80  16.97  16.77    1.03M   -0.41%\n",
+       "4  01/22/2025  17.03  17.04  17.09  16.97    1.47M    0.89%"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the CSV file\n",
+    "file_path = r\"YMAX ETF Stock Price History.csv\"\n",
+    "YMAX = pd.read_csv(file_path)\n",
+    "\n",
+    "# Display the first few rows\n",
+    "YMAX.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Vol.</th>\n",
+       "      <th>Change %</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01/28/2025</td>\n",
+       "      <td>18.81</td>\n",
+       "      <td>18.48</td>\n",
+       "      <td>18.83</td>\n",
+       "      <td>18.35</td>\n",
+       "      <td>933.82K</td>\n",
+       "      <td>2.28%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01/27/2025</td>\n",
+       "      <td>18.39</td>\n",
+       "      <td>18.27</td>\n",
+       "      <td>18.53</td>\n",
+       "      <td>18.18</td>\n",
+       "      <td>1.25M</td>\n",
+       "      <td>-2.85%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01/24/2025</td>\n",
+       "      <td>18.93</td>\n",
+       "      <td>19.00</td>\n",
+       "      <td>19.07</td>\n",
+       "      <td>18.83</td>\n",
+       "      <td>848.88K</td>\n",
+       "      <td>-0.05%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01/23/2025</td>\n",
+       "      <td>18.94</td>\n",
+       "      <td>18.94</td>\n",
+       "      <td>18.97</td>\n",
+       "      <td>18.85</td>\n",
+       "      <td>585.19K</td>\n",
+       "      <td>-0.63%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01/22/2025</td>\n",
+       "      <td>19.06</td>\n",
+       "      <td>18.94</td>\n",
+       "      <td>19.09</td>\n",
+       "      <td>18.90</td>\n",
+       "      <td>622.02K</td>\n",
+       "      <td>0.85%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  Price   Open   High    Low     Vol. Change %\n",
+       "0  01/28/2025  18.81  18.48  18.83  18.35  933.82K    2.28%\n",
+       "1  01/27/2025  18.39  18.27  18.53  18.18    1.25M   -2.85%\n",
+       "2  01/24/2025  18.93  19.00  19.07  18.83  848.88K   -0.05%\n",
+       "3  01/23/2025  18.94  18.94  18.97  18.85  585.19K   -0.63%\n",
+       "4  01/22/2025  19.06  18.94  19.09  18.90  622.02K    0.85%"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the CSV file\n",
+    "file_path = r\"YMAG ETF Stock Price History.csv\"\n",
+    "YMAG = pd.read_csv(file_path)\n",
+    "\n",
+    "# Display the first few rows\n",
+    "YMAG.head()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -47,8 +277,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
