--- a/Codes/Backtesting Code.ipynb
+++ b/Codes/Backtesting Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "[274 rows x 5 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "4 2025-01-23  16.96  16.80  16.97  16.77"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
-       "      <th>Dividends</th>\n",
+       "      <th>YMAX Dividends</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -507,36 +507,36 @@
        "</div>"
       ],
       "text/plain": [
-       "          Date  Dividends\n",
-       "3   2025-01-23       0.17\n",
-       "8   2025-01-16       0.11\n",
-       "14  2025-01-08       0.14\n",
-       "18  2025-01-03       0.18\n",
-       "23  2024-12-27       0.25\n",
-       "29  2024-12-19       0.14\n",
-       "35  2024-12-12       0.12\n",
-       "41  2024-12-05       0.24\n",
-       "46  2024-11-29       0.31\n",
-       "52  2024-11-21       0.24\n",
-       "58  2024-11-14       0.15\n",
-       "64  2024-11-07       0.12\n",
-       "70  2024-10-31       0.23\n",
-       "76  2024-10-24       0.23\n",
-       "82  2024-10-17       0.18\n",
-       "88  2024-10-10       0.20\n",
-       "94  2024-10-03       0.21\n",
-       "100 2024-09-26       0.22\n",
-       "106 2024-09-19       0.23\n",
-       "131 2024-08-15       0.59\n",
-       "153 2024-07-17       0.65\n",
-       "175 2024-06-14       0.73\n",
-       "197 2024-05-15       0.73\n",
-       "218 2024-04-17       0.63\n",
-       "242 2024-03-14       0.57\n",
-       "262 2024-02-15       0.53"
+       "          Date  YMAX Dividends\n",
+       "3   2025-01-23            0.17\n",
+       "8   2025-01-16            0.11\n",
+       "14  2025-01-08            0.14\n",
+       "18  2025-01-03            0.18\n",
+       "23  2024-12-27            0.25\n",
+       "29  2024-12-19            0.14\n",
+       "35  2024-12-12            0.12\n",
+       "41  2024-12-05            0.24\n",
+       "46  2024-11-29            0.31\n",
+       "52  2024-11-21            0.24\n",
+       "58  2024-11-14            0.15\n",
+       "64  2024-11-07            0.12\n",
+       "70  2024-10-31            0.23\n",
+       "76  2024-10-24            0.23\n",
+       "82  2024-10-17            0.18\n",
+       "88  2024-10-10            0.20\n",
+       "94  2024-10-03            0.21\n",
+       "100 2024-09-26            0.22\n",
+       "106 2024-09-19            0.23\n",
+       "131 2024-08-15            0.59\n",
+       "153 2024-07-17            0.65\n",
+       "175 2024-06-14            0.73\n",
+       "197 2024-05-15            0.73\n",
+       "218 2024-04-17            0.63\n",
+       "242 2024-03-14            0.57\n",
+       "262 2024-02-15            0.53"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
     "YMAX_Dividends = YMAX_Dividends.drop(columns=['Open', 'High', 'Low'])\n",
     "\n",
     "# Rename 'Price' column to 'Dividends'\n",
-    "YMAX_Dividends = YMAX_Dividends.rename(columns={'Price': 'Dividends'})\n",
+    "YMAX_Dividends = YMAX_Dividends.rename(columns={'Price': 'YMAX Dividends'})\n",
     "\n",
     "# Display the new DataFrame\n",
     "YMAX_Dividends\n"
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
-       "      <th>Dividends</th>\n",
+       "      <th>YMAG Dividends</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -717,35 +717,35 @@
        "</div>"
       ],
       "text/plain": [
-       "          Date  Dividends\n",
-       "3   2025-01-23       0.19\n",
-       "8   2025-01-16       0.05\n",
-       "14  2025-01-08       0.16\n",
-       "18  2025-01-03       0.31\n",
-       "23  2024-12-27       0.17\n",
-       "29  2024-12-19       0.06\n",
-       "40  2024-12-05       0.28\n",
-       "45  2024-11-29       0.20\n",
-       "51  2024-11-21       0.06\n",
-       "57  2024-11-14       0.21\n",
-       "63  2024-11-07       0.21\n",
-       "69  2024-10-31       0.15\n",
-       "75  2024-10-24       0.06\n",
-       "81  2024-10-17       0.23\n",
-       "87  2024-10-10       0.28\n",
-       "93  2024-10-03       0.16\n",
-       "99  2024-09-26       0.17\n",
-       "105 2024-09-19       0.20\n",
-       "130 2024-08-15       0.58\n",
-       "152 2024-07-17       0.64\n",
-       "174 2024-06-14       0.68\n",
-       "196 2024-05-15       0.64\n",
-       "217 2024-04-17       0.62\n",
-       "241 2024-03-14       0.59\n",
-       "261 2024-02-15       0.43"
+       "          Date  YMAG Dividends\n",
+       "3   2025-01-23            0.19\n",
+       "8   2025-01-16            0.05\n",
+       "14  2025-01-08            0.16\n",
+       "18  2025-01-03            0.31\n",
+       "23  2024-12-27            0.17\n",
+       "29  2024-12-19            0.06\n",
+       "40  2024-12-05            0.28\n",
+       "45  2024-11-29            0.20\n",
+       "51  2024-11-21            0.06\n",
+       "57  2024-11-14            0.21\n",
+       "63  2024-11-07            0.21\n",
+       "69  2024-10-31            0.15\n",
+       "75  2024-10-24            0.06\n",
+       "81  2024-10-17            0.23\n",
+       "87  2024-10-10            0.28\n",
+       "93  2024-10-03            0.16\n",
+       "99  2024-09-26            0.17\n",
+       "105 2024-09-19            0.20\n",
+       "130 2024-08-15            0.58\n",
+       "152 2024-07-17            0.64\n",
+       "174 2024-06-14            0.68\n",
+       "196 2024-05-15            0.64\n",
+       "217 2024-04-17            0.62\n",
+       "241 2024-03-14            0.59\n",
+       "261 2024-02-15            0.43"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
     "YMAG_Dividends = YMAG_Dividends.drop(columns=['Open', 'High', 'Low'])\n",
     "\n",
     "# Rename 'Price' column to 'Dividends'\n",
-    "YMAG_Dividends = YMAG_Dividends.rename(columns={'Price': 'Dividends'})\n",
+    "YMAG_Dividends = YMAG_Dividends.rename(columns={'Price': 'YMAG Dividends'})\n",
     "\n",
     "# Display the new DataFrame\n",
     "YMAG_Dividends\n"
@@ -767,25 +767,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        Date  Price   Open   High    Low  Dividends\n",
-      "0 2025-01-28  16.72  16.57  16.73  16.33       0.00\n",
-      "1 2025-01-27  16.40  16.44  16.62  16.23       0.00\n",
-      "2 2025-01-24  16.89  17.00  17.08  16.86       0.00\n",
-      "3 2025-01-23  16.96  16.80  16.97  16.77       0.17\n",
-      "4 2025-01-22  17.03  17.04  17.09  16.97       0.00\n",
-      "        Date  Price   Open   High    Low  Dividends\n",
-      "0 2025-01-28  18.81  18.48  18.83  18.35       0.00\n",
-      "1 2025-01-27  18.39  18.27  18.53  18.18       0.00\n",
-      "2 2025-01-24  18.93  19.00  19.07  18.83       0.00\n",
-      "3 2025-01-23  18.94  18.94  18.97  18.85       0.19\n",
-      "4 2025-01-22  19.06  18.94  19.09  18.90       0.00\n"
+      "        Date  Price   Open   High    Low  YMAX Dividends\n",
+      "0 2025-01-28  16.72  16.57  16.73  16.33            0.00\n",
+      "1 2025-01-27  16.40  16.44  16.62  16.23            0.00\n",
+      "2 2025-01-24  16.89  17.00  17.08  16.86            0.00\n",
+      "3 2025-01-23  16.96  16.80  16.97  16.77            0.17\n",
+      "4 2025-01-22  17.03  17.04  17.09  16.97            0.00\n",
+      "        Date  Price   Open   High    Low  YMAG Dividends\n",
+      "0 2025-01-28  18.81  18.48  18.83  18.35            0.00\n",
+      "1 2025-01-27  18.39  18.27  18.53  18.18            0.00\n",
+      "2 2025-01-24  18.93  19.00  19.07  18.83            0.00\n",
+      "3 2025-01-23  18.94  18.94  18.97  18.85            0.19\n",
+      "4 2025-01-22  19.06  18.94  19.09  18.90            0.00\n"
      ]
     }
    ],
@@ -796,11 +796,11 @@
     "\n",
     "# Merge dividends with YMAX price data\n",
     "YMAX = YMAX.merge(YMAX_Dividends, on=\"Date\", how=\"left\")\n",
-    "YMAX[\"Dividends\"].fillna(0, inplace=True)  # Fill missing dividends with 0\n",
+    "YMAX[\"YMAX Dividends\"].fillna(0, inplace=True)  # Fill missing dividends with 0\n",
     "\n",
     "# Merge dividends with YMAG price data\n",
     "YMAG = YMAG.merge(YMAG_Dividends, on=\"Date\", how=\"left\")\n",
-    "YMAG[\"Dividends\"].fillna(0, inplace=True)  # Fill missing dividends with 0\n",
+    "YMAG[\"YMAG Dividends\"].fillna(0, inplace=True)  # Fill missing dividends with 0\n",
     "\n",
     "# Display merged data\n",
     "print(YMAX.head())\n",
@@ -809,24 +809,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Merge dividends with YMAX price data\n",
+    "Divs = YMAX[[\"Date\", \"YMAX Dividends\"]].merge(YMAG[[\"Date\", \"YMAG Dividends\"]], on=\"Date\", how=\"left\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>YMAX</th>\n",
+       "      <th>YMAG</th>\n",
+       "      <th>VIX</th>\n",
+       "      <th>VVIX</th>\n",
+       "      <th>QQQ</th>\n",
+       "      <th>YMAX Dividends</th>\n",
+       "      <th>YMAG Dividends</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>2025-01-28</td>\n",
+       "      <td>16.72</td>\n",
+       "      <td>18.81</td>\n",
+       "      <td>16.410000</td>\n",
+       "      <td>103.739998</td>\n",
+       "      <td>521.809998</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>2025-01-27</td>\n",
+       "      <td>16.40</td>\n",
+       "      <td>18.39</td>\n",
+       "      <td>17.900000</td>\n",
+       "      <td>110.309998</td>\n",
+       "      <td>514.210022</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>246</th>\n",
+       "      <td>2025-01-24</td>\n",
+       "      <td>16.89</td>\n",
+       "      <td>18.93</td>\n",
+       "      <td>14.850000</td>\n",
+       "      <td>100.410004</td>\n",
+       "      <td>529.630005</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>2025-01-23</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>18.94</td>\n",
+       "      <td>15.020000</td>\n",
+       "      <td>99.519997</td>\n",
+       "      <td>532.640015</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>2025-01-22</td>\n",
+       "      <td>17.03</td>\n",
+       "      <td>19.06</td>\n",
+       "      <td>15.100000</td>\n",
+       "      <td>100.559998</td>\n",
+       "      <td>531.510010</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>2025-01-21</td>\n",
+       "      <td>16.88</td>\n",
+       "      <td>18.90</td>\n",
+       "      <td>15.060000</td>\n",
+       "      <td>98.260002</td>\n",
+       "      <td>524.799988</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>2025-01-17</td>\n",
+       "      <td>16.77</td>\n",
+       "      <td>18.79</td>\n",
+       "      <td>15.970000</td>\n",
+       "      <td>101.610001</td>\n",
+       "      <td>521.739990</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>2025-01-16</td>\n",
+       "      <td>16.51</td>\n",
+       "      <td>18.59</td>\n",
+       "      <td>16.600000</td>\n",
+       "      <td>99.839996</td>\n",
+       "      <td>513.080017</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>2025-01-15</td>\n",
+       "      <td>16.67</td>\n",
+       "      <td>18.85</td>\n",
+       "      <td>16.120001</td>\n",
+       "      <td>97.790001</td>\n",
+       "      <td>516.700012</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>2025-01-14</td>\n",
+       "      <td>16.31</td>\n",
+       "      <td>18.44</td>\n",
+       "      <td>18.709999</td>\n",
+       "      <td>107.930000</td>\n",
+       "      <td>505.079987</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date   YMAX   YMAG        VIX        VVIX         QQQ  \\\n",
+       "248 2025-01-28  16.72  18.81  16.410000  103.739998  521.809998   \n",
+       "247 2025-01-27  16.40  18.39  17.900000  110.309998  514.210022   \n",
+       "246 2025-01-24  16.89  18.93  14.850000  100.410004  529.630005   \n",
+       "245 2025-01-23  16.96  18.94  15.020000   99.519997  532.640015   \n",
+       "244 2025-01-22  17.03  19.06  15.100000  100.559998  531.510010   \n",
+       "243 2025-01-21  16.88  18.90  15.060000   98.260002  524.799988   \n",
+       "242 2025-01-17  16.77  18.79  15.970000  101.610001  521.739990   \n",
+       "241 2025-01-16  16.51  18.59  16.600000   99.839996  513.080017   \n",
+       "240 2025-01-15  16.67  18.85  16.120001   97.790001  516.700012   \n",
+       "239 2025-01-14  16.31  18.44  18.709999  107.930000  505.079987   \n",
+       "\n",
+       "     YMAX Dividends  YMAG Dividends  \n",
+       "248            0.00            0.00  \n",
+       "247            0.00            0.00  \n",
+       "246            0.00            0.00  \n",
+       "245            0.17            0.19  \n",
+       "244            0.00            0.00  \n",
+       "243            0.00            0.00  \n",
+       "242            0.00            0.00  \n",
+       "241            0.11            0.05  \n",
+       "240            0.00            0.00  \n",
+       "239            0.00            0.00  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the CSV file with all assets prices\n",
+    "file_path = 'All assets Prices.csv'\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Ensure 'Date' is in datetime format\n",
+    "data['Date'] = pd.to_datetime(data['Date'])\n",
+    "\n",
+    "# Merge the data with Divs on 'Date'\n",
+    "All_Assets = data.merge(Divs, on='Date', how='left')\n",
+    "\n",
+    "# Sort the DataFrame by 'Date' in descending order\n",
+    "All_Assets = All_Assets.sort_values(by='Date', ascending=False)\n",
+    "\n",
+    "# Display the first few rows of the merged DataFrame\n",
+    "All_Assets.head(10)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the CSV file\n",
+    "file_path = 'All assets Prices.csv'\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Ensure 'Date' is in datetime format\n",
+    "data['Date'] = pd.to_datetime(data['Date'])\n",
+    "Divs['Date'] = pd.to_datetime(Divs['Date'])\n",
+    "\n",
+    "# Merge the data with Divs on 'Date'\n",
+    "merged_df = data.merge(Divs, on='Date', how='left')\n",
+    "\n",
+    "# Display the first few rows of the merged DataFrame\n",
+    "print(merged_df.head())"
+   ]
   },
   {
    "cell_type": "code",
