--- a/Codes/Backtesting Strategy 1.ipynb
+++ b/Codes/Backtesting Strategy 1.ipynb
@@ -1787,6 +1787,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "# Compute daily returns from portfolio value for YMAX\n",
     "ymax_df[\"Portfolio_Return\"] = ymax_df[\"Portfolio_Value\"].pct_change()\n",
     "\n",
@@ -1819,8 +1822,12 @@
     "# Correct max drawdown calculation\n",
     "performance_metrics_ymax[\"Max Drawdown (%)\"] = drawdown_ymax_percentage.min()  # Already in percentage\n",
     "\n",
+    "# **Calmar Ratio** (CAGR / Absolute Max Drawdown)\n",
+    "max_drawdown_abs_ymax = abs(performance_metrics_ymax[\"Max Drawdown (%)\"])\n",
+    "performance_metrics_ymax[\"Calmar Ratio\"] = performance_metrics_ymax[\"CAGR (%)\"] / max_drawdown_abs_ymax if max_drawdown_abs_ymax != 0 else np.nan\n",
+    "\n",
     "# Convert performance metrics to DataFrame\n",
-    "performance_df = pd.DataFrame(performance_metrics_ymax, index=[\"YMAX Strategy\"])\n"
+    "performance_df = pd.DataFrame(performance_metrics_ymax, index=[\"YMAX Strategy\"])"
    ]
   },
   {
@@ -1905,6 +1912,7 @@
        "      <th>Annualized Volatility (%)</th>\n",
        "      <th>Sharpe Ratio</th>\n",
        "      <th>Max Drawdown (%)</th>\n",
+       "      <th>Calmar Ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1915,6 +1923,7 @@
        "      <td>12.42</td>\n",
        "      <td>3.67</td>\n",
        "      <td>-3.93</td>\n",
+       "      <td>12.12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1924,8 +1933,8 @@
        "               Total Return (%)  CAGR (%)  Annualized Volatility (%)  \\\n",
        "YMAX Strategy             42.63     47.58                      12.42   \n",
        "\n",
-       "               Sharpe Ratio  Max Drawdown (%)  \n",
-       "YMAX Strategy          3.67             -3.93  "
+       "               Sharpe Ratio  Max Drawdown (%)  Calmar Ratio  \n",
+       "YMAX Strategy          3.67             -3.93         12.12  "
       ]
      },
      "execution_count": 21,
@@ -2115,6 +2124,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "# Compute daily returns from portfolio value\n",
     "ymag_df[\"Portfolio_Return\"] = ymag_df[\"Portfolio_Value\"].pct_change()\n",
     "\n",
@@ -2147,8 +2159,12 @@
     "# Correct max drawdown calculation\n",
     "performance_metrics[\"Max Drawdown (%)\"] = drawdown_percentage.min()  # Already in percentage\n",
     "\n",
+    "# **Calmar Ratio** (CAGR / Absolute Max Drawdown)\n",
+    "max_drawdown_abs = abs(performance_metrics[\"Max Drawdown (%)\"])\n",
+    "performance_metrics[\"Calmar Ratio\"] = performance_metrics[\"CAGR (%)\"] / max_drawdown_abs if max_drawdown_abs != 0 else np.nan\n",
+    "\n",
     "# Convert performance metrics to DataFrame\n",
-    "performance_df = pd.DataFrame(performance_metrics, index=[\"YMAG Strategy\"])"
+    "performance_df = pd.DataFrame(performance_metrics, index=[\"YMAG Strategy\"])\n"
    ]
   },
   {
@@ -2232,6 +2248,7 @@
        "      <th>Annualized Volatility (%)</th>\n",
        "      <th>Sharpe Ratio</th>\n",
        "      <th>Max Drawdown (%)</th>\n",
+       "      <th>Calmar Ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2242,6 +2259,7 @@
        "      <td>13.25</td>\n",
        "      <td>4.48</td>\n",
        "      <td>-6.58</td>\n",
+       "      <td>9.34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2251,8 +2269,8 @@
        "               Total Return (%)  CAGR (%)  Annualized Volatility (%)  \\\n",
        "YMAG Strategy             54.79     61.42                      13.25   \n",
        "\n",
-       "               Sharpe Ratio  Max Drawdown (%)  \n",
-       "YMAG Strategy          4.48             -6.58  "
+       "               Sharpe Ratio  Max Drawdown (%)  Calmar Ratio  \n",
+       "YMAG Strategy          4.48             -6.58          9.34  "
       ]
      },
      "execution_count": 26,
