--- a/Codes/Backtesting Strategy 2.ipynb
+++ b/Codes/Backtesting Strategy 2.ipynb
@@ -3855,6 +3855,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6095,6 +6102,32 @@
     "- **Exit conditions** are based on **VVIX spikes above 100**.\n",
     "- **Re-entry conditions** trigger only when **VVIX stabilizes under 95-90**.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "enter when vix is less than 20 (range is 0 to 20) and VVIX is less than 95 (range is 95 to 0)\n",
+    "\n",
+    "\n",
+    "exit if VVIX goes above 100, or VIX goes above 20\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
